@@ -1,3 +1,8 @@
+2009-12-15  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/lastfm-ws.c (lastfm_ws_radio_tune):
+	Fall back to the old streaming API if the new one doesn't work.
+
 2009-12-13  Alberto Garcia  <agarcia@igalia.com>
 
 	=== Released Vagalume 0.8 ===
